[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/impressora.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/path_computer1.gd" type="Script" id=2]
[ext_resource path="res://scenes/computer.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/document.jpg" type="Texture" id=4]
[ext_resource path="res://scenes/server.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/path_printer1.gd" type="Script" id=6]
[ext_resource path="res://scripts/path_printer2.gd" type="Script" id=7]
[ext_resource path="res://scripts/Simulacao.gd" type="Script" id=8]
[ext_resource path="res://scripts/path_computer_2.gd" type="Script" id=9]
[ext_resource path="res://assets/Roboto-Thin.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://scripts/server.gd" type="Script" id=11]
[ext_resource path="res://scripts/path_computer4.gd" type="Script" id=12]
[ext_resource path="res://scripts/path_computer3.gd" type="Script" id=13]
[ext_resource path="res://scenes/Floor.tscn" type="PackedScene" id=14]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 384, 449, 0, 0, 0, 0, 384, 257, 0, 0, 0, 0, 128, 257, 0, 0, 0, 0, 128, 97 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -248, 376, 0, 0, 0, 0, -248, 184, 0, 0, 0, 0, 8, 184, 0, 0, 0, 0, 8, 24 )
}

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 64, -96, 0, 0, 0, 0, 256, -96 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -64, 32, 0, 0, 0, 0, -256, 32 )
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -64, -24, 0, 0, 0, 0, -256, -24 )
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -448, -24, 0, 0, 0, 0, -256, -24 )
}

[node name="Simulacao" type="Node2D"]
script = ExtResource( 8 )

[node name="printer1" parent="." instance=ExtResource( 1 )]
position = Vector2( 112, 72 )
z_index = 1
script = null

[node name="path_printer1" type="Path2D" parent="printer1"]
position = Vector2( -112, -73 )
curve = SubResource( 1 )
script = ExtResource( 6 )

[node name="follow" type="PathFollow2D" parent="printer1/path_printer1"]
position = Vector2( 384, 449 )
rotation = -1.5708

[node name="Sprite" type="Sprite" parent="printer1/path_printer1/follow"]
rotation = 1.5708
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 4 )

[node name="printer2" parent="." instance=ExtResource( 1 )]
position = Vector2( 632, 72 )
script = null

[node name="path_printer2" type="Path2D" parent="printer2"]
curve = SubResource( 2 )
script = ExtResource( 7 )

[node name="follow" type="PathFollow2D" parent="printer2/path_printer2"]
position = Vector2( -248, 376 )
rotation = -1.5708

[node name="Sprite" type="Sprite" parent="printer2/path_printer2/follow"]
rotation = 1.5708
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 4 )

[node name="server" parent="." instance=ExtResource( 5 )]
position = Vector2( 384, 480 )
z_index = 1
script = ExtResource( 11 )

[node name="Label" type="Label" parent="server"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0.141176, 0.109804, 0.109804, 1 )
margin_left = -24.0
margin_top = 96.0
margin_right = 75.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0 na fila"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="computer1" parent="." instance=ExtResource( 3 )]
position = Vector2( 120, 432 )

[node name="path_computer1" type="Path2D" parent="computer1"]
position = Vector2( 8, 112 )
curve = SubResource( 4 )
script = ExtResource( 2 )

[node name="follow" type="PathFollow2D" parent="computer1/path_computer1"]
position = Vector2( 64, -96 )

[node name="Sprite" type="Sprite" parent="computer1/path_computer1/follow"]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 4 )

[node name="computer2" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 416 )
z_index = 1

[node name="path_computer2" type="Path2D" parent="computer2"]
z_index = -1
curve = SubResource( 5 )
script = ExtResource( 9 )

[node name="follow" type="PathFollow2D" parent="computer2/path_computer2"]
position = Vector2( -64, 32 )
rotation = 3.14159

[node name="Sprite" type="Sprite" parent="computer2/path_computer2/follow"]
rotation = 3.14159
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 4 )

[node name="computer3" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 536 )

[node name="path_computer3" type="Path2D" parent="computer3"]
curve = SubResource( 6 )
script = ExtResource( 13 )

[node name="follow" type="PathFollow2D" parent="computer3/path_computer3"]
position = Vector2( -64, -24 )
rotation = 3.14159

[node name="Sprite" type="Sprite" parent="computer3/path_computer3/follow"]
rotation = 3.14159
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 4 )

[node name="computer4" parent="." instance=ExtResource( 3 )]
position = Vector2( 120, 536 )

[node name="path_computer4" type="Path2D" parent="computer4"]
position = Vector2( 520, 0 )
curve = SubResource( 7 )
script = ExtResource( 12 )

[node name="follow" type="PathFollow2D" parent="computer4/path_computer4"]
position = Vector2( -448, -24 )

[node name="Sprite" type="Sprite" parent="computer4/path_computer4/follow"]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 4 )

[node name="Control" parent="." instance=ExtResource( 14 )]
